[gd_scene load_steps=7 format=3 uid="uid://bt3g2xjkgkb8h"]

[ext_resource type="Script" path="res://UI/Scripts/Settings.gd" id="1_pccsn"]
[ext_resource type="AudioStream" uid="uid://cl4gguaugxqqc" path="res://Sounds/Bouncin N Zoomin  Sam Hyde x Christ Dillinger (Prod. Danny G).mp3" id="2_ms3lo"]

[sub_resource type="GDScript" id="GDScript_17l4s"]
script/source = "extends BounceCursor

func _on_area_2d_area_entered(): 
	bounce_start()
	

func _on_area_2d_area_exited(): 
	bounce_stop()
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqk8r"]
size = Vector2(94.5, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a568"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivlr7"]
size = Vector2(96, 31)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pccsn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "VOLUME"

[node name="Volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2

[node name="MuteLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MUTE"

[node name="Resolutions" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "960x720"
popup/item_1/text = "800x600"
popup/item_1/id = 1
popup/item_2/text = "640x480"
popup/item_2/id = 2

[node name="MiniPlayer" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mini-Player"

[node name="Fullscreen" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Fullscreen"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="bouncinandzoomin" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_ms3lo")
volume_db = -20.613
autoplay = true

[node name="Node2D" type="Node2D" parent="."]
script = SubResource("GDScript_17l4s")

[node name="Area2D" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(48, 34)
shape = SubResource("RectangleShape2D_dqk8r")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(12, 58.5)
shape = SubResource("RectangleShape2D_5a568")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(48, 117.5)
shape = SubResource("RectangleShape2D_ivlr7")

[connection signal="value_changed" from="VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/MuteBox" to="." method="_on_mute_box_toggled"]
[connection signal="toggled" from="VBoxContainer/MuteBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="VBoxContainer/MiniPlayer" to="." method="_on_mini_player_pressed"]
[connection signal="pressed" from="VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="area_entered" from="Node2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Node2D/Area2D" to="." method="_on_area_2d_area_exited"]
